resources/app-sre/vault-stage/vault.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: vault
  name: vault-stage
spec:
  host: vault.stage.devshift.net
  port:
    targetPort: https
  to:
    kind: Service
    name: vault
    weight: 100
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
